Поменял конфиги файлов

--- a/testsite/services/nginx.conf
+++ b/testsite/services/nginx.conf
@@ -29,7 +29,7 @@ http {
     #gzip  on;
 
 
-    include /var/www/testsite/services/*.conf;
+    include /var/www/testsite/services/testsite.conf;
 
 
 }
