--- a/services/config.json
+++ b/services/config.json
@@ -12,7 +12,7 @@
                 "max": 50,
                 "spare": 50
             },
-            "root": "/var/www/blog/public",
+            "root": "/var/www/public",
             "index": "index.php",
             "script": "index.php",
             "options": {
