Подправил конфиги серверов

--- a/services/testsite.conf
+++ b/services/testsite.conf
@@ -18,8 +18,7 @@ server {
         #
         # include snippets/snakeoil.conf;
 
-        root /var/www/testsite/public;
-
+        
         index index.php index.html index.htm index.nginx-debian.html ;
 
         server_name localhost;
@@ -42,7 +41,7 @@ server {
 
 
         location ~* \.(jpg|jpeg|gif|png|ico|css|bmp|swf|js|html|txt)$ {
-                root var/www/testsite/public;
+                root var/www/public;
          }
 
 
