--- a/services/testsite.conf
+++ b/services/testsite.conf
@@ -37,11 +37,11 @@ server {
 }
 
 
-
+        
 
 
         location ~* \.(jpg|jpeg|gif|png|ico|css|bmp|swf|js|html|txt)$ {
-                root var/www/public;
+                root /var/www/public;
          }
 
 
